# hiring-router-mcp

./: .dockerignore  .gcloudignore  .gitignore  DATA-PRIVACY.md  Dockerfile  cloudrun.yaml  pyproject.toml  readme-md.md  readme.md  records.sample.json  what-is-mcp.md
.github/workflows/: deploy.yml
docs/: mcp-client-connect.md
librechat/: README.md  docker-compose.override.yml  docker-compose.yml  librechat.yaml
memory-bank/: tasks.md
src/hiring_router_mcp/: __init__.py  config.py  deep_research.py  logging_setup.py  server.py  server_http_sse.py  utils.py
src/hiring_router_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/hiring_router_mcp/tools/: __init__.py  analytics.py
